--- a/EasyLearn/UI/CustomControls/SynonymView.xaml
+++ b/EasyLearn/UI/CustomControls/SynonymView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EasyLearn.UI.CustomControls.AvailableRelationView"
+﻿<UserControl x:Class="EasyLearn.UI.CustomControls.SynonymView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
