--- a/EasyLearn/UI/CustomControls/Relations/CommonRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/CommonRelationView.xaml
@@ -23,6 +23,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="35"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto" MaxHeight="0.8"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -87,16 +88,27 @@
                            Text="{Binding EnglishUnitTypeText}"/>
             </Border>
 
+            <ProgressBar Grid.Row="2"
+                         Grid.ColumnSpan="3"
+                         VerticalAlignment="Bottom" 
+                         Height="3"
+                         Background="{DynamicResource EastGrayLight}"
+                         Foreground="{Binding RatingProgressBarColor}"
+                         Value="{Binding RatingValue}"
+                         BorderBrush="GhostWhite"
+                         Maximum="100"/>
+
             <!--Горизонтальный разделитель-->
-            <Border BorderBrush="{DynamicResource EasyGray}" 
+            <!--<Border BorderBrush="{DynamicResource EasyGray}" 
                     BorderThickness="0.5" 
                     Grid.ColumnSpan="3"
                     Grid.Column="0"
-                    Grid.Row="2"
-                    Visibility="{Binding HorisontalSeporatorIsVisible, Converter={converters:ReverseCollapseConverter}}"/>
+                    Grid.Row="3"
+            
+                    Visibility="{Binding HorisontalSeporatorIsVisible, Converter={converters:ReverseCollapseConverter}}"/>-->
 
             <!--Отображение комментария-->
-            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="3" VerticalAlignment="Center" 
+            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="4" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding CommentIsVisible, Converter={converters:ReverseCollapseConverter}}">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="30"></Border>
@@ -111,7 +123,7 @@
             </Grid>
 
             <!--Отображение первого примера-->
-            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="4" VerticalAlignment="Center" 
+            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="5" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding FirstExampleIsVisible, Converter={converters:ReverseCollapseConverter}}">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
@@ -132,7 +144,7 @@
             </Grid>
 
             <!--Отображение второго примера-->
-            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="5" VerticalAlignment="Center" 
+            <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="6" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding SecondExampleIsVisible, Converter={converters:ReverseCollapseConverter}}">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
