--- a/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
@@ -17,7 +17,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="45"/>
-                <RowDefinition Height="Auto" MaxHeight="0.8"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -38,10 +38,20 @@
                            d:Text="on"/>
             </StackPanel>
 
-            <Border BorderBrush="{DynamicResource EasyGray}" 
+            <!--<Border BorderBrush="{DynamicResource EasyGray}" 
                     BorderThickness="0.5"
                     Margin="0 0.3 0 0"
-                    Grid.Row="1"/>
+                    Grid.Row="1"/>-->
+
+            <ProgressBar Grid.Row="1"
+                         Grid.ColumnSpan="3"
+                         VerticalAlignment="Bottom" 
+                         Height="3"
+                         Background="{DynamicResource EastGrayLight}"
+                         Foreground="{Binding RatingProgressBarColor}"
+                         Value="{Binding RatingValue}"
+                         BorderBrush="GhostWhite"
+                         Maximum="100"/>
 
             <Grid Width="Auto" Grid.Row="2" Margin="10 8 10 0" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3">
@@ -117,6 +127,11 @@
                 </i:Interaction.Triggers>
 
             </Button>
+
+            <materialDesign:PackIcon Kind="Star" 
+                                     Foreground="Gold" 
+                                     Margin="1 1 0 0"
+                                     Visibility="{Binding IsStudiedMarkVisible, Converter={converters:ReverseCollapseConverter}}"/>
 
         </Grid>
     </Border>
